Update for channel name correction for pubnub index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       uuid: "webClient"
     });
 
-    pubnub.subscribe({ channels: ['gps-tracker'] });
+    pubnub.subscribe({ channels: ['KCGBusTracking'] });
 
     pubnub.addListener({
       message: function(event) {
@@ -50,3 +50,4 @@
   </script>
 </body>
 </html>
+
