--- a/index.html
+++ b/index.html
@@ -452,18 +452,15 @@
       attribution: '© OpenStreetMap contributors'
     }).addTo(map);
 
+     const marker = L.marker([12.9229, 80.1275], { draggable: false }).addTo(map)
+      .bindPopup("Bus is here")
+      .openPopup();
+
     let marker = null;
     let polyline = null;
     let pathCoordinates = [];
     let lastGPSUpdate = null;
 
-    // Custom icon for the bus
-    const busIcon = L.divIcon({
-      className: 'custom-bus-icon',
-      html: '<div style="background: #667eea; color: white; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.3); animation: pulse 2s infinite;">🚌</div>',
-      iconSize: [40, 40],
-      iconAnchor: [20, 20]
-    });
 
     // Initialize PubNub
     const pubnub = new PubNub({
@@ -730,5 +727,6 @@
   </script>
 </body>
 </html>
+
 
 
