--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       uuid: 'dashboard-client'
     });
 
-    pubnub.subscribe({ channels: ['channel-name'] });
+    pubnub.subscribe({ channels: ['KCGBusTracking'] });
 
   
     pubnub.addListener({
@@ -63,3 +63,4 @@
   </script>
 </body>
 </html
+
