--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ Arduino Code :-
 #include <HTTPClient.h>
 
 // WiFi credentials
-const char* ssid = "WIFI-USERNAME"; 
-const char* password = "WIFI-PASSWORD";
+const char* ssid = "KCG-GUEST"; 
+const char* password = "$@kcg2210";
 
 // PubNub keys
-String pubKey = "ur key";
-String subKey = "ur key;
-String channel = "channel name";
+String pubKey = "pub-c-22455360-b77d-4329-9b8d-b824d95df477";
+String subKey = "sub-c-c09074cc-06a3-4f5c-9a5e-c68d7b82ef19";
+String channel = "KcgBusTracking";
 
 
 float route[][2] = {
@@ -165,3 +165,4 @@ Index Page :-
   </script>
 </body>
 </html>
+
